scrollbar fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -438,6 +438,7 @@ button{
                             .view-main-content{
                                 height: 100%;
                                 overflow-y: scroll;
+                                scrollbar-color: #000833 #EBF3FE;
                                 padding: 1rem;
                                 box-sizing: border-box;
                                 table{
