--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,7 +4,7 @@ $font: 'Inter', sans-serif;
 
 // COLORS
 $paragraph-color: gray;
-$dark-blue: #000835;
+$dark-blue: #000833;
 $light-blue: #EBF3FE;
 $violet: #9340C8;
 $accent-blue: #1664DD;
